logs/Slang/chapter-11/11.7--signed_func.sv.log
name: signed_func
description: $signed() test
should_fail: 0
tags: 11.7
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.7--signed_func.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.7--signed_func.sv:12:6: error: use of undeclared identifier '$signed'
	a = $signed(4'b1000);
	    ^~~~~~~
